add fav_stores_api and the corresponding documentation
