# backend/swagger.yaml
@@ -378,7 +378,6 @@ paths:
           description: Internal Server Error
 
   /api/1.0/stores:
-    summary: 測試
     get:
       summary: Return stores' information around the user.
       tags:
@@ -414,7 +413,6 @@ paths:
           description: Internal Server Error
   
   /api/1.0/foods:
-    summary: 測試
     get:
       summary: Return foods' information of the store.
       tags:
@@ -437,6 +435,28 @@ paths:
           description: 無對應店家的ID、店家目前無食物，或是無對應食物的ID
         '500':
           description: Internal Server Error
+  
+  /api/1.0/user/fav:
+    put:
+      summary: Update user's favorite stores.
+      description: |-
+        Example 的 User ID 和 Store ID 可能會因為資料庫的變動而改變，請以當下請求資料作為測試資料。
+        若要新增，type 為 "add"；若要移除，type 為 "remove"。
+      tags:
+        - User API
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserFavStore'
+      responses:
+        '200':
+          description: 回傳 JWT
+        '400':
+          description: ID invalid 或找不到 user/store 
+        '500':
+          description: Internal Server Error
+
 
 components:
   securitySchemes:
@@ -638,5 +658,18 @@ components:
           type: string
         credential:
           type: string
+    
+    UserFavStore:
+      type: object
+      properties: 
+        userID:
+          type: string
+          example: 644cbf7e8ef0249dc2f41f48
+        storeID:
+          type: string
+          example: 6432cf41c105a89cb9d4fbac
+        type:
+          type: string
+          example: add
         
 
